fix: remove margin on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,8 @@ ul {
 @media all and (max-width: 950px) {
   .flex-container img {
     width: 96%;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
